tests/neg/i20338c.check
-- [E052] Type Error: tests/neg/i20338c.scala:9:4 ----------------------------------------------------------------------
9 |  f.x = 42 // error
  |  ^^^
  |  Reassignment to val x
  |
  | longer explanation available when compiling with `-explain`
